<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:title="Manage Category"
        app:titleTextAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:menu="@menu/menu_category_appbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_category"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/category_item"/>

    <!--include
        android:id="@+id/add_category_layout"
        layout="@layout/add_category_button"/-->

    <TextView
        android:id="@+id/tv_category_non_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_active"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:src="@drawable/ic_rounded_add"
        android:contentDescription="@string/add_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>